--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
-    <link rel="stylesheet" href="style.css"/>
-    <script defer src="script.js"></script>
+    <link rel="stylesheet" href="./src/css/style.css"/>
+    <script defer src="./dist/app.js"></script>
+    <link href="https://fonts.cdnfonts.com/css/new-walt-disney-font" rel="stylesheet">
+                
 </head>
 <body>
     <main id="quiz">
-        <h1>Quiz JavaScript</h1>
+        <h1>Disney World Quiz</h1>
         <div id="question-container">
             <p id="question"></p>
             <div id="answers"></div>
