--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz</title>
     <link rel="stylesheet" href="./src/css/style.css"/>
-    <script defer src="./dist/app.js"></script>
+    <script defer type="module" src="./dist/app.js"></script>
     <link href="https://fonts.cdnfonts.com/css/new-walt-disney-font" rel="stylesheet">
                 
 </head>
@@ -18,8 +18,8 @@
         </div>
     <p id="feedback"></p>
     <div id="actions">
-        <button id="start-btn">Commencer le Quiz</button>
-        <button id="next-btn" disabled>Question suivante</button>
+        <button  id="start-btn">Commencer le Quiz</button>
+        <button id="next-btn">Question suivante</button>
     </div>
     </main>
 
