Display the question and answers according to the created array of objects

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
       <div id="question-container">
         <p id="question"></p>
         <div id="answers" class="visible">
-          <button class="answer">answer 1</button>
-          <button class="answer">answer 2</button>
-          <button class="answer">answer 3</button>
-          <button class="answer">answer 4</button>
+          <button class="btn">answer 1</button>
+          <button class="btn">answer 2</button>
+          <button class="btn">answer 3</button>
+          <button class="btn">answer 4</button>
         </div>
       </div>
       <p id="feedback"></p>
       <div id="actions">
         <button id="start-btn">Commencer le Quiz</button>
         <div>
-          <button id="next-btn" class="next-answer">Question suivante</button>
+          <button id="next-btn">Question suivante</button>
         </div>
       </div>
     </main>
