--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <main id="quiz">
       <h1>Disney World Quiz</h1>
+       <p id="timer"></p>
       <div id="question-container">
         <p id="question"></p>
         <div id="answers" class="visible">
