affichage score + arrêter la boucle avec affichage du score et quiz terminé + création de la fonction redémarrer le quiz + ajout de fonction question et réponses pour les distinguer de l'un et de l'autre

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
     <main id="quiz">
       <h1>Disney World Quiz</h1>
-       <p id="timer"></p>
+       <p id="timer"></p> <p id="score"></p>
       <div id="question-container">
         <p id="question"></p>
         <div id="answers" class="visible">
