débug le bouton rejouer + affichage réponse. Modification CSS du font et du background. Affichage du score finale à la fin du quiz et modification du footer pour la mise en bas de page

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,8 +12,8 @@
     />
   </head>
   <body>
+    <header> <h1>Disney World Quiz</h1></header>
     <main id="quiz">
-      <h1>Disney World Quiz</h1>
        <p id="timer"></p> <p id="score"></p>
       <div id="question-container">
         <p id="question"></p>
