modif footer en français

--- a/index.html
+++ b/index.html
@@ -33,6 +33,6 @@
       </div>
     </main>
 
-    <footer>This project was coded with passion by Alison and Giovana</footer>
+    <footer>Ce projet a été créé avec passion par Alison et Giovana</footer>
   </body>
 </html>
