First branch try (#8)
* Display the question and answers according to the created array of objects

* Give the feedback of the answer, by changing the colors  of the buttons according to the value , added .addEventListener to the "question suivante"

* commited the last changes

* affichage des questions suivantes avec ses réponses correspondantes

* chrono en place

* affichage score + arrêter la boucle avec affichage du score et quiz terminé + création de la fonction redémarrer le quiz + ajout de fonction question et réponses pour les distinguer de l'un et de l'autre

* débug le bouton rejouer + affichage réponse. Modification CSS du font et du background. Affichage du score finale à la fin du quiz et modification du footer pour la mise en bas de page

* modif footer en français

* modif css + resolution du bug console

* modification du thème et des question sur Disney Villains + modification css

* modification css pour centrer le bouton commencer le quiz + repositionnement du timer + mélange des questions lors du redémarrage du quiz, de façon à ne jamais commencer par la même question.

* ajout de la fonction shuffle dans le restart quiz

---------

Co-authored-by: Giovana Farinha <giovanafarinha8@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,8 +12,9 @@
     />
   </head>
   <body>
+    <header> <h1>Disney Villains Quiz</h1></header>
     <main id="quiz">
-      <h1>Disney World Quiz</h1>
+       <p id="timer"></p> <p id="score"></p>
       <div id="question-container">
         <p id="question"></p>
         <div id="answers" class="visible">
@@ -32,6 +33,6 @@
       </div>
     </main>
 
-    <footer>This project was coded with passion by Alison and Giovana</footer>
+    <footer>Ce projet a été créé avec passion par Alison et Giovana</footer>
   </body>
 </html>
